testdata/golden/sema/invalid/ret_block_fallthrough.fmt
// scenario: block expression with ret on one path but reachable fallthrough without value
fn main(flag: bool) -> int {
    let x = {
        if flag {
            ret 1;
        }
    };
    return x;
}
